--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,13 @@
     "        for node in get_neighbors(current, distance):\n",
     "            q.append((node, distance+1))\n",
     "        visited[current] = distance\n",
-    "    return visited, None"
+    "    return visited, None\n",
+    "\n",
+    "def debug_array(arr, coords):\n",
+    "    arr = arr.copy()\n",
+    "    for i in coords:\n",
+    "        arr[*i] = 'X'\n",
+    "    print(arr)"
    ]
   },
   {
@@ -408,23 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{(np.int64(38), np.int64(23)), (np.int64(33), np.int64(36)), (np.int64(33), np.int64(45)), (np.int64(47), np.int64(7)), (np.int64(2), np.int64(48)), (np.int64(37), np.int64(15)), (np.int64(5), np.int64(10)), (np.int64(19), np.int64(9)), (np.int64(3), np.int64(13)), (np.int64(12), np.int64(25)), (np.int64(3), np.int64(22)), (np.int64(2), np.int64(2)), (np.int64(8), np.int64(18)), (np.int64(21), np.int64(37)), (np.int64(11), np.int64(5)), (np.int64(37), np.int64(33)), (np.int64(28), np.int64(30)), (np.int64(13), np.int64(8)), (np.int64(5), np.int64(37)), (np.int64(32), np.int64(21)), (np.int64(4), np.int64(39)), (np.int64(41), np.int64(24)), (np.int64(35), np.int64(17)), (np.int64(33), np.int64(29)), (np.int64(6), np.int64(20)), (np.int64(39), np.int64(17)), (np.int64(25), np.int64(34)), (np.int64(11), np.int64(44)), (np.int64(27), np.int64(6)), (np.int64(18), np.int64(37)), (np.int64(19), np.int64(2)), (np.int64(20), np.int64(22)), (np.int64(45), np.int64(21)), (np.int64(31), np.int64(22)), (np.int64(31), np.int64(31)), (np.int64(14), np.int64(24)), (np.int64(9), np.int64(19)), (np.int64(46), np.int64(13)), (np.int64(38), np.int64(9)), (np.int64(42), np.int64(25)), (np.int64(35), np.int64(19)), (np.int64(41), np.int64(35)), (np.int64(2), np.int64(34)), (np.int64(37), np.int64(1)), (np.int64(10), np.int64(47)), (np.int64(47), np.int64(11)), (np.int64(16), np.int64(42)), (np.int64(28), np.int64(7)), (np.int64(14), np.int64(8)), (np.int64(34), np.int64(23)), (np.int64(9), np.int64(3)), (np.int64(9), np.int64(12)), (np.int64(37), np.int64(28)), (np.int64(21), np.int64(41)), (np.int64(9), np.int64(21)), (np.int64(14), np.int64(35)), (np.int64(35), np.int64(3)), (np.int64(14), np.int64(44)), (np.int64(43), np.int64(34)), (np.int64(33), np.int64(33)), (np.int64(48), np.int64(15)), (np.int64(30), np.int64(43)), (np.int64(20), np.int64(8)), (np.int64(36), np.int64(4)), (np.int64(2), np.int64(45)), (np.int64(17), np.int64(9)), (np.int64(0), np.int64(2)), (np.int64(29), np.int64(38)), (np.int64(9), np.int64(14)), (np.int64(26), np.int64(48)), (np.int64(37), np.int64(30)), (np.int64(7), np.int64(44)), (np.int64(21), np.int64(43)), (np.int64(4), np.int64(36)), (np.int64(12), np.int64(49)), (np.int64(26), np.int64(11)), (np.int64(25), np.int64(13)), (np.int64(33), np.int64(26)), (np.int64(41), np.int64(39)), (np.int64(20), np.int64(1)), (np.int64(35), np.int64(32)), (np.int64(33), np.int64(44)), (np.int64(0), np.int64(41)), (np.int64(2), np.int64(38)), (np.int64(38), np.int64(25)), (np.int64(14), np.int64(12)), (np.int64(20), np.int64(28)), (np.int64(21), np.int64(27)), (np.int64(38), np.int64(43)), (np.int64(37), np.int64(23)), (np.int64(32), np.int64(2)), (np.int64(44), np.int64(1)), (np.int64(10), np.int64(8)), (np.int64(13), np.int64(7)), (np.int64(15), np.int64(4)), (np.int64(32), np.int64(20)), (np.int64(42), np.int64(22)), (np.int64(26), np.int64(4)), (np.int64(43), np.int64(20)), (np.int64(42), np.int64(31)), (np.int64(1), np.int64(23)), (np.int64(31), np.int64(3)), (np.int64(18), np.int64(18)), (np.int64(39), np.int64(16)), (np.int64(25), np.int64(33)), (np.int64(45), np.int64(11)), (np.int64(22), np.int64(9)), (np.int64(38), np.int64(27)), (np.int64(40), np.int64(24)), (np.int64(21), np.int64(20)), (np.int64(12), np.int64(17)), (np.int64(31), np.int64(30)), (np.int64(26), np.int64(43)), (np.int64(40), np.int64(42)), (np.int64(33), np.int64(3)), (np.int64(13), np.int64(0)), (np.int64(41), np.int64(16)), (np.int64(24), np.int64(0)), (np.int64(42), np.int64(15)), (np.int64(25), np.int64(8)), (np.int64(28), np.int64(34)), (np.int64(30), np.int64(31)), (np.int64(0), np.int64(27)), (np.int64(9), np.int64(39)), (np.int64(12), np.int64(1)), (np.int64(19), np.int64(49)), (np.int64(32), np.int64(34)), (np.int64(45), np.int64(13)), (np.int64(11), np.int64(45)), (np.int64(22), np.int64(11)), (np.int64(29), np.int64(26)), (np.int64(46), np.int64(42)), (np.int64(4), np.int64(6)), (np.int64(17), np.int64(12)), (np.int64(3), np.int64(16)), (np.int64(6), np.int64(33)), (np.int64(15), np.int64(45)), (np.int64(23), np.int64(28)), (np.int64(42), np.int64(8)), (np.int64(42), np.int64(17)), (np.int64(17), np.int64(27)), (np.int64(22), np.int64(41)), (np.int64(7), np.int64(4)), (np.int64(27), np.int64(37)), (np.int64(2), np.int64(26)), (np.int64(46), np.int64(26)), (np.int64(12), np.int64(3)), (np.int64(40), np.int64(19)), (np.int64(6), np.int64(17)), (np.int64(14), np.int64(0)), (np.int64(24), np.int64(32)), (np.int64(4), np.int64(17)), (np.int64(12), np.int64(30)), (np.int64(27), np.int64(12)), (np.int64(4), np.int64(26)), (np.int64(4), np.int64(35)), (np.int64(30), np.int64(17)), (np.int64(47), np.int64(33)), (np.int64(1), np.int64(11)), (np.int64(2), np.int64(10)), (np.int64(16), np.int64(9)), (np.int64(44), np.int64(25)), (np.int64(2), np.int64(19)), (np.int64(8), np.int64(35)), (np.int64(25), np.int64(21)), (np.int64(40), np.int64(3)), (np.int64(9), np.int64(43)), (np.int64(39), np.int64(22)), (np.int64(32), np.int64(38)), (np.int64(29), np.int64(21)), (np.int64(13), np.int64(34)), (np.int64(38), np.int64(33)), (np.int64(3), np.int64(11)), (np.int64(1), np.int64(41)), (np.int64(15), np.int64(40)), (np.int64(35), np.int64(43)), (np.int64(27), np.int64(5)), (np.int64(43), np.int64(1)), (np.int64(34), np.int64(20)), (np.int64(18), np.int64(36)), (np.int64(23), np.int64(23)), (np.int64(18), np.int64(45)), (np.int64(42), np.int64(12)), (np.int64(47), np.int64(26)), (np.int64(35), np.int64(6)), (np.int64(44), np.int64(9)), (np.int64(37), np.int64(34)), (np.int64(28), np.int64(31)), (np.int64(45), np.int64(47)), (np.int64(30), np.int64(28)), (np.int64(3), np.int64(41)), (np.int64(5), np.int64(38)), (np.int64(15), np.int64(15)), (np.int64(29), np.int64(14)), (np.int64(24), np.int64(27)), (np.int64(23), np.int64(7)), (np.int64(32), np.int64(40)), (np.int64(40), np.int64(23)), (np.int64(44), np.int64(39)), (np.int64(35), np.int64(36)), (np.int64(49), np.int64(35)), (np.int64(23), np.int64(16)), (np.int64(14), np.int64(4)), (np.int64(38), np.int64(35)), (np.int64(35), np.int64(45)), (np.int64(15), np.int64(42)), (np.int64(7), np.int64(38)), (np.int64(39), np.int64(36)), (np.int64(31), np.int64(41)), (np.int64(22), np.int64(38)), (np.int64(36), np.int64(37)), (np.int64(19), np.int64(21)), (np.int64(30), np.int64(30)), (np.int64(22), np.int64(47)), (np.int64(12), np.int64(46)), (np.int64(49), np.int64(10)), (np.int64(4), np.int64(42)), (np.int64(5), np.int64(40)), (np.int64(48), np.int64(20)), (np.int64(0), np.int64(35)), (np.int64(20), np.int64(4)), (np.int64(21), np.int64(3)), (np.int64(13), np.int64(29)), (np.int64(38), np.int64(28)), (np.int64(21), np.int64(21)), (np.int64(24), np.int64(47)), (np.int64(21), np.int64(10)), (np.int64(19), np.int64(5)), (np.int64(10), np.int64(2)), (np.int64(33), np.int64(4)), (np.int64(31), np.int64(34)), (np.int64(36), np.int64(30)), (np.int64(11), np.int64(10)), (np.int64(31), np.int64(43)), (np.int64(30), np.int64(23)), (np.int64(20), np.int64(43)), (np.int64(22), np.int64(40)), (np.int64(14), np.int64(36)), (np.int64(11), np.int64(19)), (np.int64(29), np.int64(0)), (np.int64(47), np.int64(39)), (np.int64(3), np.int64(27)), (np.int64(46), np.int64(16)), (np.int64(7), np.int64(6)), (np.int64(40), np.int64(18)), (np.int64(21), np.int64(14)), (np.int64(49), np.int64(30)), (np.int64(25), np.int64(30)), (np.int64(6), np.int64(25)), (np.int64(7), np.int64(24)), (np.int64(17), np.int64(1)), (np.int64(17), np.int64(10)), (np.int64(37), np.int64(22)), (np.int64(2), np.int64(0)), (np.int64(36), np.int64(32)), (np.int64(45), np.int64(44)), (np.int64(32), np.int64(10)), (np.int64(12), np.int64(41)), (np.int64(3), np.int64(47)), (np.int64(49), np.int64(14)), (np.int64(13), np.int64(24))}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "261"
+       "(261, 898)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,92 +432,48 @@
     "def day8():\n",
     "    grid = np.array(data(8, list))\n",
     "    ymax, xmax = grid.shape\n",
+    "    def is_inside(y, x):\n",
+    "        return y >= 0 and y < ymax and x >= 0 and x < xmax\n",
+    "    def get_nodes(start, diff, sign=1):\n",
+    "        node = start.copy()\n",
+    "        while is_inside(*node):\n",
+    "            yield tuple(node)\n",
+    "            node -= sign*diff\n",
     "\n",
+    "    part1, part2 = set(), set()\n",
     "    points = {i:np.argwhere(grid==i) for i in np.unique(grid) if i != '.'}\n",
-    "    # print(points)\n",
-    "\n",
-    "    antinodes = set()\n",
     "    for antennae in points:\n",
     "        combos = itertools.combinations(points[antennae], 2)\n",
     "        for combo in combos:\n",
-    "            # print(combo)\n",
     "            diff = combo[1]-combo[0]\n",
     "            for y, x in (combo[0]-diff, combo[1]+diff):\n",
-    "                if y >= 0 and y < ymax and x >= 0 and x < xmax:\n",
-    "                    antinodes.add((y, x))\n",
-    "    print(antinodes)\n",
-    "    return len(antinodes)\n",
+    "                if is_inside(y, x):\n",
+    "                    part1.add((y, x))\n",
+    "            for (y, x) in [*get_nodes(combo[0], diff), *get_nodes(combo[1], diff, -1)]:\n",
+    "                part2.add((y, x))\n",
+    "\n",
+    "    return len(part1), len(part2)\n",
     "\n",
     "day8()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['X' '.' '.' '.' '.' 'X' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' 'X' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' 'X' '.' '.' '.' '.' 'X' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' 'X']\n",
-      " ['.' '.' 'X' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' 'X' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' 'X' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n"
+      "['............', '........0...', '.....0......', '.......0....', '....0.......', '......A.....', '............', '............', '........A...', '.........A..', '............', '............']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day8():\n",
-    "    grid = np.array(data(8, list))\n",
-    "    ymax, xmax = grid.shape\n",
-    "\n",
-    "    points = {i:np.argwhere(grid==i) for i in np.unique(grid) if i not in ('.', '#')}\n",
-    "    # print(points)\n",
-    "\n",
-    "    def is_inside(y, x):\n",
-    "        return y >= 0 and y < ymax and x >= 0 and x < xmax\n",
-    "\n",
-    "    antinodes = set()\n",
-    "    for antennae in points:\n",
-    "        combos = itertools.combinations(points[antennae], 2)\n",
-    "        for combo in combos:\n",
-    "            # print(combo)\n",
-    "            diff = combo[1]-combo[0]\n",
-    "\n",
-    "            node = combo[0].copy()\n",
-    "            while is_inside(*node):\n",
-    "                antinodes.add(tuple(node))\n",
-    "                node -= diff\n",
-    "\n",
-    "            node = combo[1].copy()\n",
-    "            while is_inside(*node):\n",
-    "                antinodes.add(tuple(node))\n",
-    "                node += diff\n",
-    "\n",
-    "    # debug = grid.copy()\n",
-    "    # for i in antinodes:\n",
-    "    #     debug[*i] = 'X'\n",
-    "    # print(debug)\n",
-    "    return len(antinodes)\n",
-    "\n",
-    "day8()"
+    "def day9():\n",
+    "    print(data(0))\n",
+    "day9()"
    ]
   }
  ],
