--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,8 @@
     "    return [parser(line.strip()) for line in f.readlines()]\n",
     "\n",
     "processors = {\n",
-    "  'int_list': lambda x: [int(y) for y in x.split()]\n",
+    "  'int_list': lambda x: [int(y) for y in x.split()],\n",
+    "  'int_string': lambda x: [int(y) for y in x]\n",
     "}\n",
     "\n",
     "def search(start, get_neighbors, end_condition=lambda _, __: False, dfs=True):\n",
@@ -42,6 +43,11 @@
     "            q.append((node, distance+1))\n",
     "        visited[current] = distance\n",
     "    return visited, None\n",
+    "\n",
+    "def sum_series(start, stop):\n",
+    "    n = (stop - start)\n",
+    "    sum = start + stop\n",
+    "    return n * sum // 2\n",
     "\n",
     "def debug_array(arr, coords):\n",
     "    arr = arr.copy()\n",
@@ -460,18 +466,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sum_series(start, stop):\n",
-    "    n = (stop - start)\n",
-    "    sum = start + stop\n",
-    "    return n * sum // 2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [
@@ -560,12 +554,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "737\n"
+     ]
+    }
+   ],
    "source": [
     "def day10():\n",
-    "    print(data(0))\n",
+    "    grid = np.array(data(10, processors['int_string']))\n",
+    "    ymax, xmax = grid.shape\n",
+    "    starts = np.argwhere(grid==0)\n",
+    "\n",
+    "    def get_neighbors(current, distance):\n",
+    "        for v in (1, -1, 1j, -1j):\n",
+    "            new = current + v\n",
+    "            x, y = int(new.real), int(new.imag)\n",
+    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                continue\n",
+    "            if grid[y, x] == distance + 1:\n",
+    "                yield new\n",
+    "\n",
+    "    def end_condition(current, distance):\n",
+    "        if distance == 9:\n",
+    "            trailheads.add(current)\n",
+    "\n",
+    "    part1 = 0\n",
+    "    for y, x in starts:\n",
+    "        trailheads = set()\n",
+    "        search(x+1j*y, get_neighbors, end_condition)\n",
+    "        part1 += len(trailheads)\n",
+    "        # print(y, x, len(trailheads))\n",
+    "    print(part1)\n",
+    "\n",
+    "day10()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1619\n"
+     ]
+    }
+   ],
+   "source": [
+    "def search2(start, get_neighbors, end_condition=lambda _, __: False, dfs=True):\n",
+    "    q, visited = deque([(start, 0)]), {}\n",
+    "    while q:\n",
+    "        current, distance = q.popleft() if dfs else q.pop()\n",
+    "        if end_condition(current, distance):\n",
+    "            return visited, current\n",
+    "        for node in get_neighbors(current, distance):\n",
+    "            q.append((node, distance+1))\n",
+    "        visited[current] = distance\n",
+    "    return visited, None\n",
+    "\n",
+    "def day10():\n",
+    "    grid = np.array(data(10, processors['int_string']))\n",
+    "    ymax, xmax = grid.shape\n",
+    "    starts = np.argwhere(grid==0)\n",
+    "\n",
+    "    def get_neighbors(current, distance):\n",
+    "        for v in (1, -1, 1j, -1j):\n",
+    "            new = current + v\n",
+    "            x, y = int(new.real), int(new.imag)\n",
+    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                continue\n",
+    "            if grid[y, x] == distance + 1:\n",
+    "                yield new\n",
+    "\n",
+    "    def end_condition(current, distance):\n",
+    "        if distance == 9:\n",
+    "            trailheads.append(current)\n",
+    "\n",
+    "    part1 = 0\n",
+    "    for y, x in starts:\n",
+    "        trailheads = list()\n",
+    "        search2(x+1j*y, get_neighbors, end_condition)\n",
+    "        part1 += len(trailheads)\n",
+    "        # print(y, x, len(trailheads))\n",
+    "    print(part1)\n",
     "\n",
     "day10()"
    ]
