--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,13 @@
     "  'int_string': lambda x: [int(y) for y in x]\n",
     "}\n",
     "\n",
-    "def search(start, get_neighbors, end_condition=lambda _, __: False, dfs=True):\n",
+    "def search(start, get_neighbors, end_condition=lambda _, __: False, dfs=True, permutations=False):\n",
     "    q, visited = deque([(start, 0)]), {}\n",
     "    while q:\n",
     "        current, distance = q.popleft() if dfs else q.pop()\n",
     "        if end_condition(current, distance):\n",
     "            return visited, current\n",
-    "        if current in visited:\n",
+    "        if current in visited and not permutations:\n",
     "            continue\n",
     "        for node in get_neighbors(current, distance):\n",
     "            q.append((node, distance+1))\n",
@@ -554,15 +554,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "737\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(737, 1619)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -580,73 +583,43 @@
     "            if grid[y, x] == distance + 1:\n",
     "                yield new\n",
     "\n",
-    "    def end_condition(current, distance):\n",
+    "    def trail_end(current, distance):\n",
     "        if distance == 9:\n",
     "            trailheads.add(current)\n",
     "\n",
-    "    part1 = 0\n",
+    "    def rating_end(current, distance):\n",
+    "        if distance == 9:\n",
+    "            ratings.append(current)\n",
+    "\n",
+    "    part1, part2 = 0, 0\n",
     "    for y, x in starts:\n",
-    "        trailheads = set()\n",
-    "        search(x+1j*y, get_neighbors, end_condition)\n",
+    "        trailheads, ratings = set(), []\n",
+    "        search(x+1j*y, get_neighbors, trail_end)\n",
+    "        search(x+1j*y, get_neighbors, rating_end, permutations=True)\n",
     "        part1 += len(trailheads)\n",
-    "        # print(y, x, len(trailheads))\n",
-    "    print(part1)\n",
+    "        part2 += len(ratings)\n",
+    "    return part1, part2\n",
     "\n",
     "day10()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1619\n"
+      "['89010123', '78121874', '87430965', '96549874', '45678903', '32019012', '01329801', '10456732']\n"
      ]
     }
    ],
    "source": [
-    "def search2(start, get_neighbors, end_condition=lambda _, __: False, dfs=True):\n",
-    "    q, visited = deque([(start, 0)]), {}\n",
-    "    while q:\n",
-    "        current, distance = q.popleft() if dfs else q.pop()\n",
-    "        if end_condition(current, distance):\n",
-    "            return visited, current\n",
-    "        for node in get_neighbors(current, distance):\n",
-    "            q.append((node, distance+1))\n",
-    "        visited[current] = distance\n",
-    "    return visited, None\n",
-    "\n",
-    "def day10():\n",
-    "    grid = np.array(data(10, processors['int_string']))\n",
-    "    ymax, xmax = grid.shape\n",
-    "    starts = np.argwhere(grid==0)\n",
-    "\n",
-    "    def get_neighbors(current, distance):\n",
-    "        for v in (1, -1, 1j, -1j):\n",
-    "            new = current + v\n",
-    "            x, y = int(new.real), int(new.imag)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            if grid[y, x] == distance + 1:\n",
-    "                yield new\n",
-    "\n",
-    "    def end_condition(current, distance):\n",
-    "        if distance == 9:\n",
-    "            trailheads.append(current)\n",
-    "\n",
-    "    part1 = 0\n",
-    "    for y, x in starts:\n",
-    "        trailheads = list()\n",
-    "        search2(x+1j*y, get_neighbors, end_condition)\n",
-    "        part1 += len(trailheads)\n",
-    "        # print(y, x, len(trailheads))\n",
-    "    print(part1)\n",
-    "\n",
-    "day10()"
+    "def day11():\n",
+    "    print(data(0))\n",
+    "day11()"
    ]
   }
  ],
