--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,10 @@
     "    arr = arr.copy()\n",
     "    for i in coords:\n",
     "        arr[*i] = 'X'\n",
-    "    print(arr)"
+    "    print(arr)\n",
+    "\n",
+    "def flatten(xss):\n",
+    "    return [x for xs in xss for x in xs]"
    ]
   },
   {
@@ -605,21 +608,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(186424, 219838428124832)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day11():\n",
+    "    stones = data(11, processors['int_list'])[0]\n",
+    "\n",
+    "    def next_stones(s):\n",
+    "        if not s:\n",
+    "            return (1, )\n",
+    "        ss = str(s)\n",
+    "        half, rem = divmod(len(ss), 2)\n",
+    "        if not rem:\n",
+    "            return int(ss[:half + rem]), int(ss[half + rem:])\n",
+    "        return (s*2024, )\n",
+    "    \n",
+    "    @cache\n",
+    "    def run_stones(s, i):\n",
+    "        if not i:\n",
+    "            return [s]\n",
+    "        result = flatten([run_stones(stone, i-1) for stone in next_stones(s)])\n",
+    "        return result\n",
+    "\n",
+    "    @cache\n",
+    "    def stone_count(s, i):\n",
+    "        if not i:\n",
+    "            return 1\n",
+    "        stones = run_stones(s, 1)\n",
+    "        result = 0\n",
+    "        for stone in stones:\n",
+    "            result += stone_count(stone, i-1)\n",
+    "        return result\n",
+    "\n",
+    "    part1 = sum(stone_count(s, 25) for s in stones)\n",
+    "    part2 = sum(stone_count(s, 75) for s in stones)\n",
+    "    return part1, part2\n",
+    "\n",
+    "day11()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['89010123', '78121874', '87430965', '96549874', '45678903', '32019012', '01329801', '10456732']\n"
+      "['125 17']\n"
      ]
     }
    ],
    "source": [
-    "def day11():\n",
+    "def day12():\n",
     "    print(data(0))\n",
-    "day11()"
+    "day12()"
    ]
   }
  ],
