--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -661,21 +661,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['125 17']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1473276"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day12():\n",
-    "    print(data(0))\n",
+    "    grid = np.array(data(12, list))\n",
+    "    ymax, xmax = grid.shape\n",
+    "    \n",
+    "    def get_neighbors(current, _):\n",
+    "        target = int(current.imag), int(current.real)\n",
+    "        for v in (1, -1, 1j, -1j):\n",
+    "            new = current + v\n",
+    "            x, y = int(new.real), int(new.imag)\n",
+    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                continue\n",
+    "            if grid[y, x] == grid[*target]:\n",
+    "                yield new\n",
+    "                perimeters[current] -= 1\n",
+    "\n",
+    "    part1 = 0\n",
+    "    visited = set()\n",
+    "    perimeters = defaultdict(lambda: 4)\n",
+    "    for j in range(ymax):\n",
+    "        for i in range(xmax):\n",
+    "            coordinate = i + 1j*j\n",
+    "            if coordinate in visited:\n",
+    "                continue\n",
+    "            region, _ = search(coordinate, get_neighbors)\n",
+    "            visited.update(region)\n",
+    "            part1 += len(region)*sum(perimeters[r] for r in region.keys())\n",
+    "    return part1\n",
+    "\n",
     "day12()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day12():\n",
+    "    grid = np.array(data(12, list))\n",
+    "    ymax, xmax = grid.shape\n",
+    "    \n",
+    "    def get_neighbors(current, _):\n",
+    "        target = int(current.imag), int(current.real)\n",
+    "        for v in (1, -1, 1j, -1j):\n",
+    "            new = current + v\n",
+    "            x, y = int(new.real), int(new.imag)\n",
+    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                continue\n",
+    "            if grid[y, x] == grid[*target]:\n",
+    "                yield new\n",
+    "                perimeters[current] -= 1\n",
+    "\n",
+    "    part1 = 0\n",
+    "    visited = set()\n",
+    "    perimeters = defaultdict(lambda: 4)\n",
+    "    for j in range(ymax):\n",
+    "        for i in range(xmax):\n",
+    "            coordinate = i + 1j*j\n",
+    "            if coordinate in visited:\n",
+    "                continue\n",
+    "            region, _ = search(coordinate, get_neighbors)\n",
+    "            visited.update(region)\n",
+    "            part1 += len(region)*sum(perimeters[r] for r in region.keys())\n",
+    "    return part1\n",
+    "\n",
+    "day12()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = set()\n",
+    "b = set([1])\n",
+    "b.add(2)\n",
+    "b in a\n",
+    "b"
    ]
   }
  ],
