--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,10 @@
     "    print(arr)\n",
     "\n",
     "def flatten(xss):\n",
-    "    return [x for xs in xss for x in xs]"
+    "    return [x for xs in xss for x in xs]\n",
+    "\n",
+    "def yx(n):\n",
+    "    return int(n.imag), int(n.real)"
    ]
   },
   {
@@ -661,23 +664,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<function day12.<locals>.<lambda> at 0x000001F9D64149A0>, {0j: 3, (1+0j): 2, (2+0j): 2, (3+0j): 3, 1j: 2, (1+1j): 2, 2j: 2, (1+2j): 2, (2+1j): 3, (2+2j): 2, (3+2j): 2, (3+3j): 3, (3+1j): 4, 3j: 3, (1+3j): 2, (2+3j): 3})\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1473276"
+       "140"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def day12():\n",
-    "    grid = np.array(data(12, list))\n",
+    "    grid = np.array(data(0, list))\n",
     "    ymax, xmax = grid.shape\n",
     "    \n",
     "    def get_neighbors(current, _):\n",
@@ -702,6 +712,7 @@
     "            region, _ = search(coordinate, get_neighbors)\n",
     "            visited.update(region)\n",
     "            part1 += len(region)*sum(perimeters[r] for r in region.keys())\n",
+    "    print(perimeters)\n",
     "    return part1\n",
     "\n",
     "day12()"
@@ -711,26 +722,66 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0j 612 170\n",
+      "170\n",
+      "(1+1j) 40 16\n",
+      "16\n",
+      "(1+3j) 40 16\n",
+      "16\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(692, 202)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def day12():\n",
-    "    grid = np.array(data(12, list))\n",
+    "    grid = np.array(data(0, list))\n",
     "    ymax, xmax = grid.shape\n",
     "    \n",
+    "    def corner_count(n):\n",
+    "        size = len(n)\n",
+    "        if not size:\n",
+    "            return 4\n",
+    "        if size == 1:\n",
+    "            return 2\n",
+    "        if size == 2:\n",
+    "            j, i = yx(n[0])\n",
+    "            y, x = yx(n[1])\n",
+    "            if j != y and i != x:\n",
+    "                return 1 if grid[j, x] == grid[y, i] else 2           \n",
+    "        return 0\n",
+    "\n",
     "    def get_neighbors(current, _):\n",
     "        target = int(current.imag), int(current.real)\n",
+    "        neighbors = []\n",
     "        for v in (1, -1, 1j, -1j):\n",
     "            new = current + v\n",
     "            x, y = int(new.real), int(new.imag)\n",
     "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
     "                continue\n",
     "            if grid[y, x] == grid[*target]:\n",
-    "                yield new\n",
+    "                neighbors.append(new)\n",
     "                perimeters[current] -= 1\n",
+    "        corners[current] = corner_count(neighbors)\n",
+    "        return neighbors\n",
     "\n",
-    "    part1 = 0\n",
+    "    part1, part2 = 0, 0\n",
     "    visited = set()\n",
     "    perimeters = defaultdict(lambda: 4)\n",
+    "    corners = {}\n",
     "    for j in range(ymax):\n",
     "        for i in range(xmax):\n",
     "            coordinate = i + 1j*j\n",
@@ -739,33 +790,12 @@
     "            region, _ = search(coordinate, get_neighbors)\n",
     "            visited.update(region)\n",
     "            part1 += len(region)*sum(perimeters[r] for r in region.keys())\n",
-    "    return part1\n",
+    "            part2 += len(region)*sum(corners[r] for r in region.keys())\n",
+    "            print(coordinate,  len(region)*sum(perimeters[r] for r in region.keys()), len(region)*sum(corners[r] for r in region.keys()))\n",
+    "            print(sum(corners[r] for r in region.keys()))\n",
+    "    return part1, part2\n",
     "\n",
     "day12()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1, 2}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = set()\n",
-    "b = set([1])\n",
-    "b.add(2)\n",
-    "b in a\n",
-    "b"
    ]
   }
  ],
