--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,9 @@
     "    return [x for xs in xss for x in xs]\n",
     "\n",
     "def yx(n):\n",
-    "    return int(n.imag), int(n.real)"
+    "    return int(n.imag), int(n.real)\n",
+    "def icoord(y, x):\n",
+    "    return x+1j*y"
    ]
   },
   {
@@ -724,48 +726,44 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0j 612 170\n",
-      "170\n",
-      "(1+1j) 40 16\n",
-      "16\n",
-      "(1+3j) 40 16\n",
-      "16\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(692, 202)"
+       "(1930, 1206)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def day12():\n",
-    "    grid = np.array(data(0, list))\n",
+    "    grid = np.array(data(12, list))\n",
     "    ymax, xmax = grid.shape\n",
     "    \n",
-    "    def corner_count(n):\n",
+    "    def corner_count(n, y, x):\n",
     "        size = len(n)\n",
     "        if not size:\n",
     "            return 4\n",
-    "        if size == 1:\n",
+    "        elif size == 1:\n",
     "            return 2\n",
-    "        if size == 2:\n",
-    "            j, i = yx(n[0])\n",
-    "            y, x = yx(n[1])\n",
-    "            if j != y and i != x:\n",
-    "                return 1 if grid[j, x] == grid[y, i] else 2           \n",
+    "        elif size == 2:\n",
+    "            b, a = yx(n[0])\n",
+    "            j, i = yx(n[1])\n",
+    "            if j != b and i != a:\n",
+    "                return 1 if grid[j, a] == grid[b, i] else 2\n",
+    "        elif size == 3:\n",
+    "            ys, xs = list(zip(*[yx(node) for node in n]))\n",
+    "            bot, top, left, right = min(ys), max(ys), min(xs), max(xs)\n",
+    "            return len([i for i in [(bot, left), (bot, right), (top, left), (top, right)] if grid[i] != grid[y, x]])\n",
+    "        elif size == 4:\n",
+    "            # for i in ((y+1, x+1), (y-1, x+1), (y+1, x-1), (y-1, x-1)):\n",
+    "            #     print(i, grid[i])\n",
+    "            return len([i for i in ((y+1, x+1), (y-1, x+1), (y+1, x-1), (y-1, x-1)) if grid[i] != grid[y, x]])\n",
     "        return 0\n",
     "\n",
     "    def get_neighbors(current, _):\n",
-    "        target = int(current.imag), int(current.real)\n",
+    "        target = yx(current)\n",
     "        neighbors = []\n",
     "        for v in (1, -1, 1j, -1j):\n",
     "            new = current + v\n",
@@ -775,7 +773,7 @@
     "            if grid[y, x] == grid[*target]:\n",
     "                neighbors.append(new)\n",
     "                perimeters[current] -= 1\n",
-    "        corners[current] = corner_count(neighbors)\n",
+    "        corners[current] = corner_count(neighbors, *target)\n",
     "        return neighbors\n",
     "\n",
     "    part1, part2 = 0, 0\n",
@@ -791,8 +789,7 @@
     "            visited.update(region)\n",
     "            part1 += len(region)*sum(perimeters[r] for r in region.keys())\n",
     "            part2 += len(region)*sum(corners[r] for r in region.keys())\n",
-    "            print(coordinate,  len(region)*sum(perimeters[r] for r in region.keys()), len(region)*sum(corners[r] for r in region.keys()))\n",
-    "            print(sum(corners[r] for r in region.keys()))\n",
+    "            # print(grid[j, i], sum(corners[r] for r in region.keys()), list(filter(lambda x: x[1], zip(region.keys(), (corners[r] for r in region.keys())))))\n",
     "    return part1, part2\n",
     "\n",
     "day12()"
