--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "import regex as re\n",
     "from intervaltree import Interval, IntervalTree\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
-    "from sortedcontainers import SortedList, SortedDict\n",
+    "from sortedcontainers import SortedDict\n",
     "\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "(2599, 1948)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
     "        occurences = set()\n",
     "\n",
     "        def get_neighbors(current, distance):\n",
-    "            col, row = int(current.real), int(current.imag)\n",
+    "            row, col = yx(current)\n",
     "            target_letter = target[distance]\n",
     "            if grid[row, col] != target_letter:\n",
     "                return\n",
@@ -201,7 +201,7 @@
     "                return\n",
     "            for v in [1, -1, 1j, -1j, 1+1j, 1-1j, -1+1j, -1-1j]:\n",
     "                new = current + v\n",
-    "                x, y = int(new.real), int(new.imag)\n",
+    "                y, x = yx(new)\n",
     "                if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
     "                    continue\n",
     "                yield new\n",
@@ -229,7 +229,7 @@
     "        l = len(target)\n",
     "        td = l-1\n",
     "        for start, end in hits:\n",
-    "            i, j = int(start.real), int(start.imag)\n",
+    "            j, i = yx(start)\n",
     "            d = end-start\n",
     "            if (\n",
     "                (d.real == td and not d.imag and ''.join(grid[j, i:i+l]) == target)\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "(737, 1619)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
     "    def get_neighbors(current, distance):\n",
     "        for v in (1, -1, 1j, -1j):\n",
     "            new = current + v\n",
-    "            x, y = int(new.real), int(new.imag)\n",
+    "            y, x = yx(new)\n",
     "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
     "                continue\n",
     "            if grid[y, x] == distance + 1:\n",
@@ -666,72 +666,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<function day12.<locals>.<lambda> at 0x000001F9D64149A0>, {0j: 3, (1+0j): 2, (2+0j): 2, (3+0j): 3, 1j: 2, (1+1j): 2, 2j: 2, (1+2j): 2, (2+1j): 3, (2+2j): 2, (3+2j): 2, (3+3j): 3, (3+1j): 4, 3j: 3, (1+3j): 2, (2+3j): 3})\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "140"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day12():\n",
-    "    grid = np.array(data(0, list))\n",
-    "    ymax, xmax = grid.shape\n",
-    "    \n",
-    "    def get_neighbors(current, _):\n",
-    "        target = int(current.imag), int(current.real)\n",
-    "        for v in (1, -1, 1j, -1j):\n",
-    "            new = current + v\n",
-    "            x, y = int(new.real), int(new.imag)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            if grid[y, x] == grid[*target]:\n",
-    "                yield new\n",
-    "                perimeters[current] -= 1\n",
-    "\n",
-    "    part1 = 0\n",
-    "    visited = set()\n",
-    "    perimeters = defaultdict(lambda: 4)\n",
-    "    for j in range(ymax):\n",
-    "        for i in range(xmax):\n",
-    "            coordinate = i + 1j*j\n",
-    "            if coordinate in visited:\n",
-    "                continue\n",
-    "            region, _ = search(coordinate, get_neighbors)\n",
-    "            visited.update(region)\n",
-    "            part1 += len(region)*sum(perimeters[r] for r in region.keys())\n",
-    "    print(perimeters)\n",
-    "    return part1\n",
-    "\n",
-    "day12()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1930, 1206)"
+       "(1473276, 901100)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,19 +691,15 @@
     "            return 4\n",
     "        elif size == 1:\n",
     "            return 2\n",
-    "        elif size == 2:\n",
+    "        elif size == 2: \n",
     "            b, a = yx(n[0])\n",
     "            j, i = yx(n[1])\n",
-    "            if j != b and i != a:\n",
+    "            if j != b and i != a: # L shape\n",
     "                return 1 if grid[j, a] == grid[b, i] else 2\n",
-    "        elif size == 3:\n",
-    "            ys, xs = list(zip(*[yx(node) for node in n]))\n",
+    "        else:\n",
+    "            ys, xs = list(zip(*[yx(node) for node in n])) # Check diagonals\n",
     "            bot, top, left, right = min(ys), max(ys), min(xs), max(xs)\n",
     "            return len([i for i in [(bot, left), (bot, right), (top, left), (top, right)] if grid[i] != grid[y, x]])\n",
-    "        elif size == 4:\n",
-    "            # for i in ((y+1, x+1), (y-1, x+1), (y+1, x-1), (y-1, x-1)):\n",
-    "            #     print(i, grid[i])\n",
-    "            return len([i for i in ((y+1, x+1), (y-1, x+1), (y+1, x-1), (y-1, x-1)) if grid[i] != grid[y, x]])\n",
     "        return 0\n",
     "\n",
     "    def get_neighbors(current, _):\n",
@@ -767,7 +707,7 @@
     "        neighbors = []\n",
     "        for v in (1, -1, 1j, -1j):\n",
     "            new = current + v\n",
-    "            x, y = int(new.real), int(new.imag)\n",
+    "            y, x = yx(new)\n",
     "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
     "                continue\n",
     "            if grid[y, x] == grid[*target]:\n",
@@ -778,8 +718,7 @@
     "\n",
     "    part1, part2 = 0, 0\n",
     "    visited = set()\n",
-    "    perimeters = defaultdict(lambda: 4)\n",
-    "    corners = {}\n",
+    "    perimeters, corners = defaultdict(lambda: 4), {}\n",
     "    for j in range(ymax):\n",
     "        for i in range(xmax):\n",
     "            coordinate = i + 1j*j\n",
@@ -789,10 +728,28 @@
     "            visited.update(region)\n",
     "            part1 += len(region)*sum(perimeters[r] for r in region.keys())\n",
     "            part2 += len(region)*sum(corners[r] for r in region.keys())\n",
-    "            # print(grid[j, i], sum(corners[r] for r in region.keys()), list(filter(lambda x: x[1], zip(region.keys(), (corners[r] for r in region.keys())))))\n",
     "    return part1, part2\n",
     "\n",
     "day12()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['RRRRIICCFF', 'RRRRIICCCF', 'VVRRRCCFFF', 'VVRCCCJFFF', 'VVVVCJJCFE', 'VVIVCCJJEE', 'VVIIICJJEE', 'MIIIIIJJEE', 'MIIISIJEEE', 'MMMISSJEEE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day13():\n",
+    "    print(data(0))\n",
+    "day13()"
    ]
   }
  ],
